src/snapshots/iwd_tui__tests__snapshot_forget_overlay.snap
---
source: src/tests.rs
expression: "render_to_string(&app, 80, 20)"
---
 iwd -- wlan0 -- DISCONNECTED                                          esc:quit
+------------------------------------------------------------------------------+
|>  OldNetwork            █████▓▒░       -60 dBm   psk   known                 |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                  +----------------------------------------+                  |
|                  |  FORGET: OldNetwork?                   |                  |
|                  |                                        |                  |
|                  |  y:confirm  n:cancel                   |                  |
|                  +----------------------------------------+                  |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
+------------------------------------------------------------------------------+
 j/k:move  enter:connect  d:disconnect  f:forget  s:scan  a:autoconnect
