src/snapshots/iwd_tui__tests__snapshot_narrow_connected.snap
---
source: src/tests.rs
expression: "render_to_string(&app, 80, 20)"
---
 iwd -- wlan0 -- CONNECTED                                             esc:quit
+------------------------------------------------------------------------------+
|>  HomeWiFi              ████████▓▒░    -45 dBm   psk   CONNECTED             |
|   Neighbor              ███▓▒░         -72 dBm   psk                         |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
+------------------------------------------------------------------------------+
 j/k:move  enter:connect  d:disconnect  f:forget  s:scan  a:autoconnect
