src/snapshots/iwd_tui__tests__snapshot_password_overlay.snap
---
source: src/tests.rs
expression: "render_to_string(&app, 80, 20)"
---
 iwd -- wlan0 -- DISCONNECTED                                          esc:quit
+------------------------------------------------------------------------------+
|>  SecureNet             ██████▓▒░      -55 dBm   psk                         |
|                                                                              |
|                                                                              |
|                                                                              |
|                  +----------------------------------------+                  |
|                  |  CONNECT: SecureNet                    |                  |
|                  |                                        |                  |
|                  |  Password: ******_                     |                  |
|                  |                                        |                  |
|                  |  v:show  enter:connect  esc:cancel     |                  |
|                  +----------------------------------------+                  |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
|                                                                              |
+------------------------------------------------------------------------------+
 j/k:move  enter:connect  d:disconnect  f:forget  s:scan  a:autoconnect
