src/snapshots/iwd_tui__tests__snapshot_wide_disconnected.snap
---
source: src/tests.rs
expression: "render_to_string(&app, 120, 24)"
---
 iwd -- wlan0 -- DISCONNECTED                                                                                  esc:quit
+----------------------------------------------------------------------------------------------------------------------+
|>  OpenNet               ███████▓▒░     -50 dBm   psk      | NETWORK: OpenNet                                         |
|   SecureNet             ████▓▒░        -68 dBm   psk   kno| Status:                                                  |
|                                                           | Type:    psk                                             |
|                                                           | RSSI:    -50 dBm                                         |
|                                                           |                                                          |
|                                                           |                                                          |
|                                                           |                                                          |
|                                                           |                                                          |
|                                                           |                                                          |
|                                                           |                                                          |
|                                                           |                                                          |
|                                                           |                                                          |
|                                                           |                                                          |
|                                                           |                                                          |
|                                                           |                                                          |
|                                                           |                                                          |
|                                                           |                                                          |
|                                                           |                                                          |
|                                                           |                                                          |
|                                                           |                                                          |
+----------------------------------------------------------------------------------------------------------------------+
 j/k:move  enter:connect  d:disconnect  f:forget  s:scan  a:autoconnect
